--- a/usr.bin/rcs/rcs.1
+++ b/usr.bin/rcs/rcs.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/rcs/rcs.1,v 1.53 2007/05/31 19:20:15 jmc Exp $
+.\"	$OpenBSD: src/usr.bin/rcs/rcs.1,v 1.54 2007/05/31 21:56:03 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Jean-Francois Brousseau <jfb@openbsd.org>
 .\" Copyright (c) 2005 Xavier Santolaria <xsa@openbsd.org>
@@ -24,7 +24,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt RCS 1
 .Os
 .Sh NAME
@@ -286,7 +286,7 @@ of the RCS file.
 The log message supplied during commit, preceded by a header
 containing the RCS filename, the revision number, the
 author, and the date (UTC).
-.It $\Mdocdate$
+.It $\&Mdocdate$
 Produce a date of the form month name, day number, and year,
 suitable for the
 .Xr mdoc 7
