--- a/share/man/man9/workq_add_task.9
+++ b/share/man/man9/workq_add_task.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man9/workq_add_task.9,v 1.3 2007/05/31 23:36:44 tedu Exp $
+.\"	$OpenBSD: src/share/man/man9/workq_add_task.9,v 1.4 2007/06/01 00:27:23 jmc Exp $
 .\"
 .\" Copyright (c) 2007 David Gwynne <dlg@openbsd.org>
 .\"
@@ -71,7 +71,7 @@ the need for a wrapper struct to contain them in a single argument.
 The
 .Pa flags
 argument specifies creation and runtime characteristics of the task.
-the possible flags are:
+The possible flags are:
 .Pp
 .Bl -tag -offset indent -width WQ_WAITOKXXX -compact
 .It Dv WQ_WAITOK
