--- a/sbin/mount/mount.8
+++ b/sbin/mount/mount.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/mount/mount.8,v 1.61 2007/05/31 19:19:45 jmc Exp $
+.\"	$OpenBSD: src/sbin/mount/mount.8,v 1.62 2007/06/01 05:37:14 deraadt Exp $
 .\"	$NetBSD: mount.8,v 1.11 1995/07/12 06:23:21 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
@@ -360,7 +360,6 @@ with option
 .Xr mount 2 ,
 .Xr fstab 5 ,
 .Xr disklabel 8 ,
-.Xr mount_ados 8 ,
 .Xr mount_cd9660 8 ,
 .Xr mount_ext2fs 8 ,
 .Xr mount_ffs 8 ,
