--- a/share/man/man5/fstab.5
+++ b/share/man/man5/fstab.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man5/fstab.5,v 1.39 2007/05/31 19:19:58 jmc Exp $
+.\"	$OpenBSD: src/share/man/man5/fstab.5,v 1.40 2007/06/01 05:37:14 deraadt Exp $
 .\"	$NetBSD: fstab.5,v 1.5.2.1 1995/11/16 20:11:11 pk Exp $
 .\"
 .\" Copyright (c) 1980, 1989, 1991, 1993
@@ -99,10 +99,6 @@ describes the type of the filesystem.
 The system currently supports the following types of filesystems:
 .Pp
 .Bl -tag -width indent -offset indent -compact
-.It adosfs
-An
-.Tn AmigaDOS
-filesystem.
 .It cd9660
 An ISO 9660 CD-ROM filesystem.
 .It ext2fs
