--- a/share/man/man9/malloc.9
+++ b/share/man/man9/malloc.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man9/malloc.9,v 1.38 2007/05/31 19:20:00 jmc Exp $
+.\"	$OpenBSD: src/share/man/man9/malloc.9,v 1.39 2007/06/01 05:37:14 deraadt Exp $
 .\"	$NetBSD: malloc.9,v 1.2 1996/10/30 05:29:54 lukem Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -220,12 +220,6 @@ Allocated tty structures.
 Argument lists & other mem used by exec.
 .It Dv M_MISCFSMNT
 Misc. FS mount structures.
-.It Dv M_ADOSFSMNT
-ADOSFS mount structures.
-.It Dv M_ANODE
-ADOSFS anode structures and tables.
-.It Dv M_ADOSFSBITMAP
-ADOSFS bitmap.
 .It Dv M_PFKEY
 Pfkey data.
 .It Dv M_TDB
