--- a/share/man/man4/options.4
+++ b/share/man/man4/options.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/options.4,v 1.182 2007/06/01 05:37:14 deraadt Exp $
+.\"	$OpenBSD: src/share/man/man4/options.4,v 1.183 2007/06/04 21:34:01 jmc Exp $
 .\"	$NetBSD: options.4,v 1.21 1997/06/25 03:13:00 thorpej Exp $
 .\"
 .\" Copyright (c) 1998 Theo de Raadt
@@ -702,10 +702,6 @@ for debugging IPv6 neighbor discovery protocol handling.
 See
 .Xr sysctl 3
 for details.
-.It Cd option IPX, IPXIP
-Include support for Internetwork Packet Exchange protocol commonly in
-use by
-.Tn Novell NetWare .
 .It Cd option NETATALK
 Include kernel support for the AppleTalk family of protocols.
 This suite of supporting code is sometimes called
