one more IPX removal; ok henning

--- a/lib/libc/sys/socket.2
+++ b/lib/libc/sys/socket.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/sys/socket.2,v 1.26 2007/05/31 19:19:34 jmc Exp $
+.\"	$OpenBSD: src/lib/libc/sys/socket.2,v 1.27 2007/06/05 06:56:19 jmc Exp $
 .\"	$NetBSD: socket.2,v 1.5 1995/02/27 12:37:53 cgd Exp $
 .\"
 .\" Copyright (c) 1983, 1991, 1993
@@ -56,8 +56,7 @@ The currently understood formats are
 .Bd -literal -offset indent
 AF_UNIX		(UNIX internal protocols),
 AF_INET		(ARPA Internet protocols),
-AF_INET6	(ARPA IPv6 protocols),
-AF_IPX		(Internetwork Packet Exchange), and
+AF_INET6	(ARPA IPv6 protocols), and
 AF_IMPLINK	(IMP \*(lqhost at IMP\*(rq link layer).
 .Ed
 .Pp
