--- a/sys/dev/usb/TODO
+++ b/sys/dev/usb/TODO
@@ -1,3 +1,5 @@
+$OpenBSD: src/sys/dev/usb/Attic/TODO,v 1.15 2007/06/09 12:17:38 mbalmer Exp $
+
 Some things that need to be done:
 ---------------------------------
 
