--- a/share/man/man4/ubt.4
+++ b/share/man/man4/ubt.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/ubt.4,v 1.3 2007/05/31 19:19:52 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/ubt.4,v 1.4 2007/06/11 08:42:01 jmc Exp $
 .\"
 .\" Copyright (c) 2004 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -27,6 +27,7 @@ The
 .Nm
 device driver provides support for USB Bluetooth adapters.
 .Sh SEE ALSO
+.Xr bluetooth 4 ,
 .Xr intro 4 ,
 .Xr netintro 4 ,
 .Xr usb 4
