--- a/share/man/man4/man4.amd64/intro.4
+++ b/share/man/man4/man4.amd64/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.amd64/intro.4,v 1.30 2007/05/31 19:19:53 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.amd64/intro.4,v 1.31 2007/06/20 14:09:15 jmc Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
@@ -113,6 +113,7 @@ introduction to Universal Serial Bus support
 .El
 .Sh SEE ALSO
 .Xr autoconf 4 ,
+.Xr cpu 4 ,
 .Xr config 8
 .Sh HISTORY
 The
