--- a/share/man/man4/man4.hppa/intro.4
+++ b/share/man/man4/man4.hppa/intro.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/man4.hppa/intro.4,v 1.16 2007/05/31 19:19:54 jmc Exp $
+.\" $OpenBSD: src/share/man/man4/man4.hppa/intro.4,v 1.17 2007/06/20 14:09:15 jmc Exp $
 .\"
 .\" Copyright (c) 2002,2003 Paul Weissmann
 .\" All rights reserved.
@@ -176,6 +176,7 @@ introduction to Universal Serial Bus support
 .El
 .Sh SEE ALSO
 .Xr autoconf 4 ,
+.Xr cpu 4 ,
 .Xr io 4 ,
 .Xr runway 4 ,
 .Xr config 8
