"an NPX", not "a NPX";

--- a/share/man/man4/man4.i386/npx.4
+++ b/share/man/man4/man4.i386/npx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.i386/npx.4,v 1.14 2007/05/31 19:19:55 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.i386/npx.4,v 1.15 2007/06/20 14:11:33 jmc Exp $
 .\"
 .\" Copyright (c) 1993 Christopher G. Demetriou
 .\" All rights reserved.
@@ -53,7 +53,7 @@ coprocessors.
 The
 .Nm
 driver is required for proper system functioning regardless
-of whether or not a NPX is present.
+of whether or not an NPX is present.
 .Sh SEE ALSO
 .Xr intro 4 ,
 .Xr isa 4
