--- a/share/man/man4/man4.hppa/ssio.4
+++ b/share/man/man4/man4.hppa/ssio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.hppa/ssio.4,v 1.1 2007/06/19 19:28:25 kettenis Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.hppa/ssio.4,v 1.2 2007/06/20 14:23:51 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -30,10 +30,10 @@ chip on systems with PA-8500 and later 64-bit CPUs.
 It configures the Programmable Interrupt Controllers integrated on the chip
 to route interrupts for the integrated
 .Xr ohci 4
-USB controller (which appears as a seperate PCI device).
+USB controller (which appears as a separate PCI device).
 .Sh SEE ALSO
 .Xr intro 4 ,
-.Xr pci 4 ,
+.Xr pci 4
 .Sh HISTORY
 The
 .Nm
