--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.220 2007/05/31 19:19:51 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.221 2007/06/20 14:31:13 jmc Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -418,6 +418,8 @@ bridges, including
 expansion backplanes
 .It Xr sdhc 4
 SD Host Controller
+.It Xr ssio 4
+National Semiconductor PC87560 Legacy IO
 .It Xr uhci 4
 USB Universal Host Controller Interface
 .It Xr viapm 4
