Update for lpt at ssio.

--- a/share/man/man4/lpt.4
+++ b/share/man/man4/lpt.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/lpt.4,v 1.6 2007/05/31 19:19:50 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/lpt.4,v 1.7 2007/06/20 17:44:07 kettenis Exp $
 .\"
 .\" Copyright (c) 1993 Christopher G. Demetriou
 .\" All rights reserved.
@@ -42,6 +42,7 @@
 .Pp
 .Cd "# hppa"
 .Cd "lpt0 at gsc? irq 7"
+.Cd "lpt0 at ssio?"
 .Pp
 .Cd "# sparc64"
 .Cd "lpt* at apio?"
