--- a/share/man/man4/man4.hppa/gsc.4
+++ b/share/man/man4/man4.hppa/gsc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.hppa/gsc.4,v 1.23 2007/05/31 19:19:54 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.hppa/gsc.4,v 1.24 2007/06/21 08:17:20 jmc Exp $
 .\"
 .\"
 .\" Copyright (c) 1999 Michael Shalayeff
@@ -65,7 +65,7 @@ provides support for the following devices:
 .Pp
 .Bl -tag -width 12n -offset indent -compact
 .It Xr com 4
-RS-232 ports
+serial communications interface
 .It Xr gsckbc 4
 PC-style keyboard controller
 .It Xr harmony 4
