--- a/share/man/man4/man4.sgi/intro.4
+++ b/share/man/man4/man4.sgi/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.sgi/intro.4,v 1.9 2007/05/31 19:19:56 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.sgi/intro.4,v 1.10 2007/06/21 08:17:20 jmc Exp $
 .\"     $NetBSD: intro.4,v 1.8 2004/02/10 16:54:19 wiz Exp $
 .\"
 .\" Copyright (c) 2003 The NetBSD Foundation, Inc.
@@ -118,7 +118,7 @@ Not all supported devices are listed.
 .It Xr ahc 4
 Adaptec PCI SCSI host adapter driver
 .It Xr com 4
-Serial communications interface
+serial communications interface
 .\" .It crime
 .\" found on the O2
 .\" .It dsclock
