--- a/share/man/man4/man4.hppa/gsc.4
+++ b/share/man/man4/man4.hppa/gsc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.hppa/gsc.4,v 1.24 2007/06/21 08:17:20 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.hppa/gsc.4,v 1.25 2007/06/21 08:22:04 jmc Exp $
 .\"
 .\"
 .\" Copyright (c) 1999 Michael Shalayeff
@@ -24,7 +24,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: June 21 2007 $
 .Dt GSC 4 hppa
 .Os
 .Sh NAME
@@ -75,7 +75,7 @@ introduction to HP-HIL support
 .It Xr ie 4
 Intel i82596 Ethernet device
 .It Xr lpt 4
-Centronics printer port
+parallel port driver
 .It Xr oosiop 4
 .Tn Symbios/NCR
 53C700 SCSI I/O Processor
