--- a/share/man/man4/man4.aviion/intro.4
+++ b/share/man/man4/man4.aviion/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.aviion/intro.4,v 1.3 2007/05/31 19:19:53 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.aviion/intro.4,v 1.4 2007/06/21 08:40:00 jmc Exp $
 .\" Copyright (c) 1990, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -39,14 +39,14 @@ The manual pages in section 4 describe the special files,
 related driver functions, and networking support
 available in the system.
 In this part of the manual, the
-.Tn SYNOPSIS
+.Sx SYNOPSIS
 section of
 each configurable device gives a sample specification
 for use in constructing a system description for the
 .Xr config 8
 program.
 The
-.Tn DIAGNOSTICS
+.Sx DIAGNOSTICS
 section lists messages which may appear on the console
 and/or in the system error log
 .Pa /var/log/messages
