!.Tn is spawning behind my back!
.Tn -> .Sx: section headers are not tradenames;

--- a/share/man/man4/man4.sparc/intro.4
+++ b/share/man/man4/man4.sparc/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: src/share/man/man4/man4.sparc/intro.4,v 1.48 2007/05/31 19:19:56 jmc Exp $
+.\"     $OpenBSD: src/share/man/man4/man4.sparc/intro.4,v 1.49 2007/06/21 08:49:20 jmc Exp $
 .\"	$NetBSD: intro.4,v 1.5 1998/02/06 06:07:00 perry Exp $
 .\"
 .\" Copyright (c) 1996 Jonathan Stone.
@@ -41,14 +41,14 @@ The manual pages in section 4 describe the special files,
 related driver functions, and networking support
 available in the system.
 In this part of the manual, the
-.Tn SYNOPSIS
+.Sx SYNOPSIS
 section of
 each configurable device gives a sample specification
 for use in constructing a system description for the
 .Xr config 8
 program.
 The
-.Tn DIAGNOSTICS
+.Sx DIAGNOSTICS
 section lists messages which may appear on the console
 and/or in the system error log
 .Pa /var/log/messages
