--- a/share/man/man4/man4.hp300/intro.4
+++ b/share/man/man4/man4.hp300/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.hp300/intro.4,v 1.25 2007/05/31 19:19:54 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.hp300/intro.4,v 1.26 2007/06/21 08:49:20 jmc Exp $
 .\"
 .\" Copyright (c) 1990, 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -40,14 +40,14 @@ The manual pages in section 4 describe the special files,
 related driver functions, and networking support
 available in the system.
 In this part of the manual, the
-.Tn SYNOPSIS
+.Sx SYNOPSIS
 section of
 each configurable device gives a sample specification
 for use in constructing a system description for the
 .Xr config 8
 program.
 The
-.Tn DIAGNOSTICS
+.Sx DIAGNOSTICS
 section lists messages which may appear on the console
 and/or in the system error log
 .Pa /var/log/messages
