--- a/share/man/man4/man4.sgi/intro.4
+++ b/share/man/man4/man4.sgi/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.sgi/intro.4,v 1.10 2007/06/21 08:17:20 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.sgi/intro.4,v 1.11 2007/06/21 08:49:20 jmc Exp $
 .\"     $NetBSD: intro.4,v 1.8 2004/02/10 16:54:19 wiz Exp $
 .\"
 .\" Copyright (c) 2003 The NetBSD Foundation, Inc.
@@ -32,7 +32,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: June 21 2007 $
 .Dt INTRO 4 sgi
 .Os
 .Sh NAME
@@ -43,13 +43,13 @@ The manual pages in section 4 describe the special files,
 related driver functions, and networking support
 available in the system.
 In this part of the manual, the
-.Tn SYNOPSIS
+.Sx SYNOPSIS
 section of each configurable device gives a sample specification
 for use in constructing a system description for the
 .Xr config 8
 program.
 The
-.Tn DIAGNOSTICS
+.Sx DIAGNOSTICS
 section lists messages which may appear on the console
 and/or in the system error log
 .Pa /var/log/messages
