--- a/share/man/man4/man4.sparc/daadio.4
+++ b/share/man/man4/man4.sparc/daadio.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: src/share/man/man4/man4.sparc/daadio.4,v 1.8 2007/05/31 19:19:56 jmc Exp $
+.\"     $OpenBSD: src/share/man/man4/man4.sparc/daadio.4,v 1.9 2007/06/21 09:26:34 jmc Exp $
 .\"
 .\" Copyright (c) 2002 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -29,7 +29,7 @@
 .Os
 .Sh NAME
 .Nm daadio
-.Nd MATRIX MD-DAADIO digital/analog, analog/digital, parallel i/o board
+.Nd MATRIX MD-DAADIO digital/analog, analog/digital, parallel I/O board
 .Sh SYNOPSIS
 .Cd "daadio* at fvme? addr 0x0 level 1 vect 0x1f"
 .Sh DESCRIPTION
