as for the rest of man4, use the .Nd lines to describe devices;
whilst here, comment out entries for the following devices which have
no man pages (miod can tell me if this is a problem):

hp300: hpibbus
mac68k: sbc
mvme68k: flash ipic mc memc pcc pcctwo sram vme vs wdsc zs
sparc: fd

--- a/share/man/man4/man4.aviion/intro.4
+++ b/share/man/man4/man4.aviion/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.aviion/intro.4,v 1.4 2007/06/21 08:40:00 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.aviion/intro.4,v 1.5 2007/06/21 10:18:27 jmc Exp $
 .\" Copyright (c) 1990, 1991 Regents of the University of California.
 .\" All rights reserved.
 .\"
@@ -28,7 +28,7 @@
 .\"
 .\"     from: @(#)intro.4	5.2 (Berkeley) 3/27/91
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: June 21 2007 $
 .Dt INTRO 4 aviion
 .Os
 .Sh NAME
@@ -99,7 +99,7 @@ Not all supported devices are listed.
 .Bl -tag -compact -width "pcctwo(4)"
 .\" dart
 .It Xr le 4
-AMD LANCE Ethernet device.
+AMD LANCE Ethernet device
 .\" syscon
 .\" vme
 .El
