--- a/share/man/man4/man4.hp300/nhpib.4
+++ b/share/man/man4/man4.hp300/nhpib.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.hp300/nhpib.4,v 1.6 2007/05/31 19:19:54 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.hp300/nhpib.4,v 1.7 2007/06/21 12:06:14 jmc Exp $
 .\"     $NetBSD: hpib.4,v 1.2 2002/01/15 01:35:44 wiz Exp $
 .\"
 .\" Copyright (c) 2001 The NetBSD Foundation, Inc.
@@ -40,7 +40,7 @@
 .Os
 .Sh NAME
 .Nm nhpib
-.Nd built-in, 98624 and 98625 HP-IB interfaces
+.Nd built-in 98624 and 98625 HP-IB interfaces
 .Sh SYNOPSIS
 .Cd "nhpib*	at dio?                " Pq "built-in and 98624 HP-IB interface"
 .Cd "hpibbus*	at nhpib?"
