--- a/bin/stty/stty.1
+++ b/bin/stty/stty.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/bin/stty/stty.1,v 1.33 2007/05/31 19:19:15 jmc Exp $
+.\"	$OpenBSD: src/bin/stty/stty.1,v 1.34 2007/06/25 09:56:18 jmc Exp $
 .\"	$NetBSD: stty.1,v 1.10 1995/09/07 06:57:14 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993, 1994
@@ -647,7 +647,8 @@ The
 .Nm
 utility exits 0 on success or >0 if an error occurred.
 .Sh SEE ALSO
-.Xr termios 4
+.Xr termios 4 ,
+.Xr tty 4
 .Sh STANDARDS
 The
 .Nm
