--- a/lib/libc/stdlib/strtoul.3
+++ b/lib/libc/stdlib/strtoul.3
@@ -29,7 +29,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: src/lib/libc/stdlib/strtoul.3,v 1.17 2007/05/31 19:19:32 jmc Exp $
+.\"	$OpenBSD: src/lib/libc/stdlib/strtoul.3,v 1.18 2007/06/29 18:54:37 millert Exp $
 .\"
 .Dd $Mdocdate$
 .Dt STRTOUL 3
@@ -175,6 +175,12 @@ and the global variable
 .Va errno
 is set to
 .Er ERANGE .
+If no conversion could be performed, 0 is returned;
+the global variable
+.Va errno
+is also set to
+.Er EINVAL,
+though this is not portable across all platforms.
 .Pp
 There is no way to determine if
 .Fn strtoul
