--- a/share/man/man4/cas.4
+++ b/share/man/man4/cas.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/cas.4,v 1.4 2007/05/31 19:19:49 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/cas.4,v 1.5 2007/07/01 17:08:00 kettenis Exp $
 .\"
 .\" Copyright (c) 2007 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -23,6 +23,7 @@
 .Sh SYNOPSIS
 .Cd "cas* at pci?"
 .Cd "brgphy* at mii?"
+.Cd "gentbi* at mii?"
 .Sh DESCRIPTION
 The
 .Nm
