--- a/share/man/man4/ahci.4
+++ b/share/man/man4/ahci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/ahci.4,v 1.5 2007/05/31 19:19:49 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/ahci.4,v 1.6 2007/07/02 03:37:40 dlg Exp $
 .\"
 .\" Copyright (c) 2006 David Gwynne <dlg@openbsd.org>
 .\"
@@ -22,6 +22,7 @@
 .Nd Advanced Host Controller Interface for Serial ATA
 .Sh SYNOPSIS
 .Cd "ahci* at pci?"
+.Cd "ahci* at jmb?"
 .Cd "scsibus* at ahci?"
 .Sh DESCRIPTION
 The
@@ -39,6 +40,7 @@ controllers are actual ATA controllers, the driver emulates SCSI via a
 translation layer.
 .Sh SEE ALSO
 .Xr intro 4 ,
+.Xr jmb 4 ,
 .Xr pci 4 ,
 .Xr pciide 4 ,
 .Xr scsi 4
