list jmb(4) as an IDE controller

--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.221 2007/06/20 14:31:13 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.222 2007/07/02 09:15:25 dlg Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -117,6 +117,8 @@ TRM-S1040 based PCI SCSI interface
 .Bl -tag -width 10n -offset ind -compact
 .It Xr ahci 4
 Advanced Host Controller Interface for Serial ATA
+.It Xr jmb 4
+JMicron JMB36x SATA and PATA controller
 .It Xr pciide 4
 PCI IDE controller driver
 .It Xr sili 4
