--- a/share/man/man4/pciide.4
+++ b/share/man/man4/pciide.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/pciide.4,v 1.73 2007/07/02 14:17:43 dlg Exp $
+.\"	$OpenBSD: src/share/man/man4/pciide.4,v 1.74 2007/07/02 14:31:06 dlg Exp $
 .\"	$NetBSD: pciide.4,v 1.8 1999/03/16 01:19:17 garbled Exp $
 .\"
 .\" Copyright (c) 1998 Manuel Bouyer.
@@ -31,7 +31,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: July 2 2007 $
 .Dt PCIIDE 4
 .Os
 .Sh NAME
@@ -91,7 +91,7 @@ Intel 6300ESB/6321ESB
 .It
 ITE IT8211F, IT8212F
 .It
-JMicron JMB368
+JMicron JMB361/2/3/5/6/8
 .It
 National Semiconductor PC87415
 .It
