--- a/share/man/man4/bnx.4
+++ b/share/man/man4/bnx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/bnx.4,v 1.16 2007/05/31 19:19:49 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/bnx.4,v 1.17 2007/07/04 00:20:22 krw Exp $
 .\"
 .\"Copyright (c) 2006 Broadcom Corporation
 .\" David Christensen <davidch@broadcom.com>.  All rights reserved.
@@ -30,7 +30,7 @@
 \"
 .\" $FreeBSD: /repoman/r/ncvs/src/share/man/man4/bce.4,v 1.2 2006/04/10 20:12:17 brueffer Exp $
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: May 31 2007 $
 .Dt BNX 4
 .Os
 .Sh NAME
@@ -77,7 +77,6 @@ The following features are supported in the
 driver under
 .Ox :
 .Bd -literal -offset indent
-IPv4 transmit TCP/UDP checksum offload
 IPv4 receive IP/TCP/UDP checksum offload
 .\"Jumbo frames (up to 9022 bytes)
 VLAN tag insertion
