add "cua" to the NAME section;

--- a/share/man/man4/tty.4
+++ b/share/man/man4/tty.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/tty.4,v 1.31 2007/05/31 19:19:52 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/tty.4,v 1.32 2007/07/04 12:00:18 jmc Exp $
 .\"	$NetBSD: tty.4,v 1.4 1996/03/19 04:26:01 paulus Exp $
 .\"
 .\" Copyright (c) 1991, 1992, 1993
@@ -34,7 +34,8 @@
 .Dt TTY 4
 .Os
 .Sh NAME
-.Nm tty
+.Nm tty ,
+.Nm cua
 .Nd general terminal interface
 .Sh SYNOPSIS
 .Fd #include <sys/ioctl.h>
