--- a/regress/sys/dev/audio_info/audiotest_gsinfo.1
+++ b/regress/sys/dev/audio_info/audiotest_gsinfo.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/regress/sys/dev/audio_info/audiotest_gsinfo.1,v 1.2 2007/07/06 00:51:11 jakemsr Exp $
+.\"	$OpenBSD: src/regress/sys/dev/audio_info/audiotest_gsinfo.1,v 1.3 2007/07/06 01:01:43 jakemsr Exp $
 .\"
 .\" Copyright (c) 2007 Jacob Meuser <jakemsr@sdf.lonestar.org>
 .\"
@@ -14,9 +14,8 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.\"	$Id: audiotest_gsinfo.1,v 1.1.1.1 2007/07/06 00:42:12 jakemsr Exp $
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: July 6 2007 $
 .Dt AUDIOTEST_GSINFO 1
 .Os
 .Sh NAME
