--- a/libexec/spamd/spamd.8
+++ b/libexec/spamd/spamd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/libexec/spamd/spamd.8,v 1.104 2007/06/25 12:28:34 tom Exp $
+.\"	$OpenBSD: src/libexec/spamd/spamd.8,v 1.105 2007/07/07 06:54:09 jmc Exp $
 .\"
 .\" Copyright (c) 2002 Theo de Raadt.  All rights reserved.
 .\"
@@ -185,11 +185,11 @@ using
 .It Fl S Ar secs
 Stutter at greylisted connections for the specified amount
 of seconds, after which the connection is not stuttered at.
-Defaults to 10.
+The default is 10; maximum is 90.
 .It Fl s Ar secs
 Delay each character sent to the client by the specified
 amount of seconds.
-Defaults to 1.
+The default is 1; maximum is 10.
 .It Fl v
 Enable verbose logging.
 By default
