--- a/share/man/man4/wpi.4
+++ b/share/man/man4/wpi.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/wpi.4,v 1.12 2007/07/10 18:29:38 damien Exp $
+.\" $OpenBSD: src/share/man/man4/wpi.4,v 1.13 2007/07/10 18:31:01 damien Exp $
 .\"
 .\" Copyright (c) 2006, 2007
 .\"	Damien Bergamini <damien.bergamini@free.fr>. All rights reserved.
@@ -25,7 +25,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: June 6 2007 $
+.Dd $Mdocdate: July 10 2007 $
 .Os
 .Dt WPI 4
 .Sh NAME
@@ -181,7 +181,7 @@ The driver needs at least version 2.14.4 of the following firmware file,
 which is loaded when an interface is brought up:
 .Pp
 .Bl -tag -width Ds -offset indent -compact
-.It Pa /etc/firmware/wpi-ucode
+.It Pa /etc/firmware/wpi-3945abg
 .El
 .Pp
 This firmware file is not free because Intel refuses to grant
