--- a/lib/libc/sys/poll.2
+++ b/lib/libc/sys/poll.2
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/sys/poll.2,v 1.20 2007/05/31 19:19:33 jmc Exp $
+.\"	$OpenBSD: src/lib/libc/sys/poll.2,v 1.21 2007/07/11 08:12:15 jmc Exp $
 .\"
 .\" Copyright (c) 1994 Jason R. Thorpe
 .\" All rights reserved.
@@ -237,6 +237,12 @@ was too large.
 .Xr read 2 ,
 .Xr select 2 ,
 .Xr write 2
+.Sh STANDARDS
+The
+.Fn poll
+function is compliant with the
+.St -xpg4.3
+specification.
 .Sh HISTORY
 A
 .Fn poll
