--- a/share/man/man4/man4.hppa/ssio.4
+++ b/share/man/man4/man4.hppa/ssio.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.hppa/ssio.4,v 1.3 2007/06/21 09:40:51 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.hppa/ssio.4,v 1.4 2007/07/15 20:00:49 kettenis Exp $
 .\"
 .\" Copyright (c) 2007 Mark Kettenis <kettenis@openbsd.org>
 .\"
@@ -49,5 +49,3 @@ The
 .Nm
 driver first appeared in
 .Ox 4.2 .
-.Sh BUGS
-Support for the integrated serial ports and parallel port is missing.
