--- a/lib/libc/gen/sysctl.3
+++ b/lib/libc/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.170 2007/07/16 22:29:00 cnst Exp $
+.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.171 2007/07/16 22:41:56 cnst Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -27,7 +27,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: July 16 2007 $
 .Dt SYSCTL 3
 .Os
 .Sh NAME
@@ -286,7 +286,7 @@ privileges may change the value.
 .It Dv HW_PAGESIZE No "	integer	no"
 .It Dv HW_PHYSMEM No "	integer	no"
 .It Dv HW_PRODUCT No "	string	no"
-.It Dv HW_SENSORS No "	struct	no"
+.It Dv HW_SENSORS No "	node	not applicable"
 .It Dv HW_SERIALNO No "	string	no"
 .It Dv HW_SETPERF No "	integer	yes"
 .It Dv HW_USERMEM No "	integer	no"
