--- a/lib/libc/gen/sysctl.3
+++ b/lib/libc/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.171 2007/07/16 22:41:56 cnst Exp $
+.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.172 2007/07/19 14:50:16 jmc Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -908,7 +908,7 @@ privileges may change the value.
 .It Dv KERN_TIMECOUNTER_CHOICE No "	string	no"
 .It Dv KERN_TIMECOUNTER_HARDWARE No "	string	yes"
 .It Dv KERN_TIMECOUNTER_TICK No "	integer	no"
-.It Dv KERN_TIMECOUNTER_TIMESTEPWARNINGS No "	integer	no"
+.It Dv KERN_TIMECOUNTER_TIMESTEPWARNINGS No "	integer	yes"
 .El
 .Pp
 The variables are as follows:
