--- a/sbin/sysctl/sysctl.8
+++ b/sbin/sysctl/sysctl.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/sysctl/sysctl.8,v 1.140 2007/07/18 15:50:29 cnst Exp $
+.\"	$OpenBSD: src/sbin/sysctl/sysctl.8,v 1.141 2007/07/19 14:50:16 jmc Exp $
 .\"	$NetBSD: sysctl.8,v 1.4 1995/09/30 07:12:49 thorpej Exp $
 .\"
 .\" Copyright (c) 1993
@@ -199,7 +199,7 @@ not all of the variables are relevant to all architectures.
 .It kern.emul.other	integer	yes
 .It kern.maxclusters	integer	yes
 .It kern.timecounter.tick	integer	no
-.It kern.timecounter.timestepwarnings	integer	no
+.It kern.timecounter.timestepwarnings	integer	yes
 .It kern.timecounter.hardware	string	yes
 .It kern.timecounter.choice	string	no
 .It vm.vmmeter	struct	no
