Quote digest otherwise it won't be parsed as a string.

--- a/usr.sbin/hoststated/hoststated.conf.5
+++ b/usr.sbin/hoststated/hoststated.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/hoststated/Attic/hoststated.conf.5,v 1.45 2007/05/31 19:20:24 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/hoststated/Attic/hoststated.conf.5,v 1.46 2007/07/24 17:51:33 pyr Exp $
 .\"
 .\" Copyright (c) 2006 Pierre-Yves Ritschard <pyr@spootnik.org>
 .\"
@@ -672,7 +672,7 @@ interval 5
 table phphosts {
 	timeout 300
 	real port 8080
-	check http "/" digest 630aa3c2f...
+	check http "/" digest "630aa3c2f..."
 	host $www1
 	host $www2
 	host $www3
