--- a/usr.sbin/sensorsd/sensorsd.8
+++ b/usr.sbin/sensorsd/sensorsd.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/sensorsd/sensorsd.8,v 1.12 2007/07/31 06:56:24 robert Exp $
+.\"	$OpenBSD: src/usr.sbin/sensorsd/sensorsd.8,v 1.13 2007/07/31 08:11:36 jmc Exp $
 .\"
 .\" Copyright (c) 2003 Henning Brauer <henning@openbsd.org>
 .\" Copyright (c) 2005 Matthew Gream <matthew.gream@pobox.com>
@@ -15,15 +15,15 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: May 31 2007 $
+.Dd $Mdocdate: July 31 2007 $
 .Dt SENSORSD 8
 .Os
 .Sh NAME
 .Nm sensorsd
 .Nd monitor hardware sensors
 .Sh SYNOPSIS
-.Op Fl d
 .Nm sensorsd
+.Op Fl d
 .Sh DESCRIPTION
 The
 .Nm
