--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.223 2007/07/02 10:13:01 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/pci.4,v 1.224 2007/08/01 21:23:26 miod Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -47,9 +47,6 @@
 .Pp
 .Cd "# amd64, i386"
 .Cd "pci* at mainbus0"
-.Pp
-.Cd "# cats"
-.Cd "pci0 at footbridge?"
 .Pp
 .Cd "# hppa"
 .Cd "pci* at dino?"
