--- a/share/man/man9/pci_intr_map.9
+++ b/share/man/man9/pci_intr_map.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man9/pci_intr_map.9,v 1.7 2007/07/28 14:32:59 kettenis Exp $
+.\"	$OpenBSD: src/share/man/man9/pci_intr_map.9,v 1.8 2007/08/02 07:13:27 jmc Exp $
 .\"
 .\" Copyright (c) 2005 Michael Shalayeff
 .\" All rights reserved.
@@ -28,7 +28,6 @@
 .Sh SYNOPSIS
 .Fd #include <alpha/pci/pci_machdep.h>
 .Fd #include <i386/pci/pci_machdep.h>
-.Fd #include <cats/pci/pci_machdep.h>
 .Fd #include <powerpc/pci/pci_machdep.h>
 .Fd #include <sgi/pci/pci_machdep.h>
 .Fd #include <machine/pci_machdep.h>
