--- a/share/man/man8/man8.amd64/MAKEDEV.8
+++ b/share/man/man8/man8.amd64/MAKEDEV.8
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man8/man8.amd64/MAKEDEV.8,v 1.29 2007/07/25 18:50:49 todd Exp $
+.\" $OpenBSD: src/share/man/man8/man8.amd64/MAKEDEV.8,v 1.30 2007/08/02 16:40:27 deraadt Exp $
 .\"
 .\" THIS FILE AUTOMATICALLY GENERATED.  DO NOT EDIT.
 .\" generated from:
@@ -245,6 +245,9 @@ Loadable kernel modules interface, see
 .It Ar music*
 MIDI devices, see
 .Xr midi 4 .
+.It Ar nvram
+NVRAM access, see
+.Xr nvram 4 .
 .It Ar pci*
 PCI bus devices, see
 .Xr pci 4 .
