--- a/lib/libc/stdlib/malloc.3
+++ b/lib/libc/stdlib/malloc.3
@@ -30,7 +30,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: src/lib/libc/stdlib/malloc.3,v 1.46 2007/05/31 19:19:31 jmc Exp $
+.\"	$OpenBSD: src/lib/libc/stdlib/malloc.3,v 1.47 2007/08/08 21:24:29 millert Exp $
 .\"
 .Dd $Mdocdate$
 .Dt MALLOC 3
@@ -100,7 +100,7 @@ If
 .Fn malloc
 must be used, be sure to test for overflow:
 .Bd -literal -offset indent
-if (num && SIZE_MAX / num < size) {
+if (size && num > SIZE_MAX / size) {
 	errno = ENOMEM;
 	err(1, "overflow");
 }
