--- a/share/man/man9/mbuf.9
+++ b/share/man/man9/mbuf.9
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: src/share/man/man9/mbuf.9,v 1.26 2007/05/31 19:20:00 jmc Exp $
+.\"     $OpenBSD: src/share/man/man9/mbuf.9,v 1.27 2007/08/10 14:53:25 henning Exp $
 .\"
 .\" Copyright (c) 2001 Jean-Jacques Bernard-Gundol <jjbg@openbsd.org>
 .\" All rights reserved.
@@ -117,6 +117,16 @@ struct  pkthdr {
         SLIST_HEAD(packet_tags, m_tag) tags;
         int     len;
         int     csum_flags;
+	struct	pkthdr_pf;
+};
+
+struct pkthdr_pf {
+	void	 *hdr;
+	u_int	  rtableid;
+	u_int32_t qid;
+	u_int16_t tag;
+	u_int8_t  flags;
+	u_int8_t  routed;
 };
 
 struct m_ext {
