--- a/lib/libc/gen/sysctl.3
+++ b/lib/libc/gen/sysctl.3
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.172 2007/07/19 14:50:16 jmc Exp $
+.\"	$OpenBSD: src/lib/libc/gen/sysctl.3,v 1.173 2007/08/14 18:27:35 cnst Exp $
 .\"
 .\" Copyright (c) 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -331,7 +331,7 @@ Third, fourth and fifth levels together comprise an array of
 structures containing snapshot readings of hardware monitoring sensors.
 In such usage, third level indicates the numerical representation
 of the sensor device name to which the sensor is attached
-(a device's xname and number is matched with the help of
+(a device's xname and number are matched with the help of
 .Li struct sensordev
 structure above),
 fourth level indicates sensor type and
