s/Wi-Fi/WiFi/ since it is how Intel spell it.

--- a/share/man/man4/iwn.4
+++ b/share/man/man4/iwn.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/share/man/man4/iwn.4,v 1.1 2007/09/06 16:37:03 damien Exp $
+.\" $OpenBSD: src/share/man/man4/iwn.4,v 1.2 2007/09/06 16:55:51 damien Exp $
 .\"
 .\" Copyright (c) 2007
 .\"	Damien Bergamini <damien.bergamini@free.fr>. All rights reserved.
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: September 6 2007 $
 .Os
 .Dt IWN 4
 .Sh NAME
@@ -28,7 +28,7 @@ The
 .Nm
 driver provides support for
 .Tn Intel
-Wireless Wi-Fi Link 4965AGN Mini PCI Express network adapters.
+Wireless WiFi Link 4965AGN Mini PCI Express network adapters.
 .Pp
 These are the modes the
 .Nm
