Correct my mail address.

--- a/usr.sbin/relayd/relayd.conf.5
+++ b/usr.sbin/relayd/relayd.conf.5
@@ -1,7 +1,7 @@
-.\"	$OpenBSD: src/usr.sbin/relayd/relayd.conf.5,v 1.51 2007/09/28 07:20:46 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/relayd/relayd.conf.5,v 1.52 2007/09/28 13:29:56 pyr Exp $
 .\"
 .\" Copyright (c) 2006, 2007 Reyk Floeter <reyk@openbsd.org>
-.\" Copyright (c) 2006, 2007 Pierre-Yves Ritschard <pyr@spootnik.org>
+.\" Copyright (c) 2006, 2007 Pierre-Yves Ritschard <pyr@openbsd.org>
 .\"
 .\" Permission to use, copy, modify, and distribute this software for any
 .\" purpose with or without fee is hereby granted, provided that the above
@@ -15,7 +15,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: September 5 2007 $
+.Dd $Mdocdate: September 28 2007 $
 .Dt HOSTSTATED.CONF 5
 .Os
 .Sh NAME
