add onewire(4) to the hardware list;

--- a/share/man/man4/man4.zaurus/intro.4
+++ b/share/man/man4/man4.zaurus/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.zaurus/intro.4,v 1.14 2007/06/21 10:18:27 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.zaurus/intro.4,v 1.15 2007/10/09 15:01:40 jmc Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
@@ -149,6 +149,8 @@ man page.
 The following buses and controllers list these devices:
 .Pp
 .Bl -tag -width "cardbus(4)XX" -offset 3n -compact
+.It Xr onewire 4
+1-Wire bus
 .It Xr pcmcia 4
 introduction to PCMCIA (PC Card) support
 .It Xr usb 4
