--- a/share/man/man4/man4.alpha/intro.4
+++ b/share/man/man4/man4.alpha/intro.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: src/share/man/man4/man4.alpha/intro.4,v 1.40 2007/10/09 14:26:00 jmc Exp $
+.\"     $OpenBSD: src/share/man/man4/man4.alpha/intro.4,v 1.41 2007/10/09 15:01:40 jmc Exp $
 .\"     $NetBSD: intro.4,v 1.10 2003/05/06 07:44:54 wiz Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
@@ -38,7 +38,7 @@
 .\" ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: June 21 2007 $
+.Dd $Mdocdate: October 9 2007 $
 .Dt INTRO 4 alpha
 .Os
 .Sh NAME
@@ -394,6 +394,8 @@ introduction to EISA bus support
 Inter IC (I2C) bus
 .It Xr isa 4
 introduction to ISA bus support
+.It Xr onewire 4
+1-Wire bus
 .It Xr pci 4
 introduction to PCI bus support
 .It Xr usb 4
