--- a/share/man/man4/man4.armish/intro.4
+++ b/share/man/man4/man4.armish/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.armish/intro.4,v 1.6 2007/10/09 14:31:13 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.armish/intro.4,v 1.7 2007/10/09 15:01:40 jmc Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
@@ -28,7 +28,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: June 21 2007 $
+.Dd $Mdocdate: October 9 2007 $
 .Dt INTRO 4 armish
 .Os
 .Sh NAME
@@ -99,6 +99,8 @@ The following buses and controllers list these devices:
 .Bl -tag -width "cardbus(4)XX" -offset 3n -compact
 .It Xr iic 4
 Inter IC (I2C) bus
+.It Xr onewire 4
+1-Wire bus
 .It Xr pci 4
 introduction to PCI bus support
 .It Xr usb 4
