--- a/share/man/man4/man4.i386/intro.4
+++ b/share/man/man4/man4.i386/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.i386/intro.4,v 1.81 2007/10/09 14:26:00 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.i386/intro.4,v 1.82 2007/10/09 15:01:40 jmc Exp $
 .\"
 .\" Copyright (c) 1994 Christopher G. Demetriou
 .\" All rights reserved.
@@ -28,7 +28,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd $Mdocdate: June 21 2007 $
+.Dd $Mdocdate: October 9 2007 $
 .Dt INTRO 4 i386
 .Os
 .Sh NAME
@@ -107,6 +107,8 @@ Inter IC (I2C) bus
 introduction to ISA bus support
 .It Xr isapnp 4
 introduction to ISA Plug-and-Play support
+.It Xr onewire 4
+1-Wire bus
 .It Xr pci 4
 introduction to PCI bus support
 .It Xr pcmcia 4
