--- a/share/man/man4/man4.macppc/intro.4
+++ b/share/man/man4/man4.macppc/intro.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/man4.macppc/intro.4,v 1.49 2007/10/09 14:26:00 jmc Exp $
+.\"	$OpenBSD: src/share/man/man4/man4.macppc/intro.4,v 1.50 2007/10/09 15:01:40 jmc Exp $
 .\"
 .\" Copyright (c) 2001 Peter Valchev.
 .\" All rights reserved.
@@ -24,7 +24,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"
-.Dd $Mdocdate: June 21 2007 $
+.Dd $Mdocdate: October 9 2007 $
 .Dt INTRO 4 macppc
 .Os
 .Sh NAME
@@ -101,6 +101,8 @@ introduction to CardBus support
 Inter IC (I2C) bus
 .It Xr macobio 4
 introduction to Apple PowerPC onboard I/O bus support
+.It Xr onewire 4
+1-Wire bus
 .It Xr pci 4
 introduction to PCI bus support
 .It Xr pcmcia 4
