wbng(4) manual page for Winbond W83793G; 'commit it' deraadt

--- a/share/man/man4/iic.4
+++ b/share/man/man4/iic.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/iic.4,v 1.63 2007/10/07 14:57:16 jsg Exp $
+.\"	$OpenBSD: src/share/man/man4/iic.4,v 1.64 2007/10/14 15:37:44 cnst Exp $
 .\"
 .\" Copyright (c) 2004, 2006 Alexander Yurchenko <grange@openbsd.org>
 .\"
@@ -158,6 +158,8 @@ TI THMC50, Analog ADM1022/1028 temperature sensor
 TAOS TSL2560/61 light sensor
 .It Xr wbenv 4
 Winbond W83L784R/W83L785R/W83L785TS-L temperature, voltage, and fan sensor
+.It Xr wbng 4
+Winbond W83793G temperature, voltage, and fan sensor
 .El
 .Sh SEE ALSO
 .Xr intro 4 ,
