better .Nd; from Pierre Riteau

--- a/usr.sbin/pkg_add/pkg_delete.1
+++ b/usr.sbin/pkg_add/pkg_delete.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/pkg_add/pkg_delete.1,v 1.24 2007/05/31 19:20:26 jmc Exp $
+.\"	$OpenBSD: src/usr.sbin/pkg_add/pkg_delete.1,v 1.25 2007/10/31 14:45:06 jmc Exp $
 .\"
 .\" Documentation and design originally from FreeBSD. All the code has
 .\" been rewritten since. We keep the documentation's notice:
@@ -20,7 +20,7 @@
 .Os
 .Sh NAME
 .Nm pkg_delete
-.Nd a utility for deleting previously installed software package distributions
+.Nd delete software package distributions
 .Sh SYNOPSIS
 .Nm pkg_delete
 .Op Fl cIinqvx
