--- a/usr.sbin/pkg_add/pkg_info.1
+++ b/usr.sbin/pkg_add/pkg_info.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/pkg_add/pkg_info.1,v 1.28 2007/06/20 15:41:36 steven Exp $
+.\"	$OpenBSD: src/usr.sbin/pkg_add/pkg_info.1,v 1.29 2007/10/31 14:45:06 jmc Exp $
 .\"
 .\" Documentation and design originally from FreeBSD. All the code has
 .\" been rewritten since. We keep the documentation's notice:
@@ -20,7 +20,7 @@
 .Os
 .Sh NAME
 .Nm pkg_info
-.Nd a utility for displaying information on software packages
+.Nd display information on software packages
 .Sh SYNOPSIS
 .Nm pkg_info
 .Bk -words
