Correct bad example, in /etc/ttys use the _tty_ not _cua_, of course.
spottet by deraadt.

--- a/sbin/ldattach/ldattach.8
+++ b/sbin/ldattach/ldattach.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/ldattach/ldattach.8,v 1.1.1.1 2007/11/03 15:22:54 mbalmer Exp $
+.\"	$OpenBSD: src/sbin/ldattach/ldattach.8,v 1.2 2007/11/03 15:35:01 mbalmer Exp $
 .\"
 .\" Copyright (c) 2007 Marc Balmer <mbalmer@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: November 3 2007 $
 .Dt LDATTACH 8
 .Os
 .Sh NAME
@@ -134,11 +134,11 @@ by using
 to attach the
 .Xr nmea 4
 line discipline to
-.Pa /dev/cua00 ,
+.Pa /dev/tty00 ,
 add a line of the following form to
 .Pa /etc/ttys :
 .Bd -literal -offset indent
-cua00	"/sbin/ldattach nmea"	unknown	on
+tty00	"/sbin/ldattach nmea"	unknown	on
 .Ed
 .Sh SEE ALSO
 .Xr nmea 4 ,
