--- a/share/man/man4/umbg.4
+++ b/share/man/man4/umbg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/umbg.4,v 1.2 2007/11/10 14:13:57 mbalmer Exp $
+.\"	$OpenBSD: src/share/man/man4/umbg.4,v 1.3 2007/11/11 18:19:05 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Marc Balmer <mbalmer@openbsd.org>
 .\"
@@ -52,7 +52,7 @@ This is an indication that hardware should be checked
 to see if it is still functional.
 .El
 .Pp
-A second sensor provides the relative signal quality as percentage.
+A second sensor provides the relative signal quality as a percentage.
 The status of this sensor is used to report the status of the device itself:
 .Bl -tag -width "CRITICALXX" -offset indent
 .It OK
