--- a/share/man/man4/mbg.4
+++ b/share/man/man4/mbg.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/share/man/man4/mbg.4,v 1.10 2007/11/11 15:36:51 mbalmer Exp $
+.\"	$OpenBSD: src/share/man/man4/mbg.4,v 1.11 2007/11/11 18:19:05 jmc Exp $
 .\"
 .\" Copyright (c) 2006 Marc Balmer <mbalmer@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 5 2007 $
+.Dd $Mdocdate: November 11 2007 $
 .Dt MBG 4
 .Os
 .Sh NAME
@@ -50,7 +50,7 @@ Currently, the following cards are supported by
 PCI Express DCF77 time signal station receiver card
 .El
 .Pp
-A second sensor provides the relative signal quality as percentage.
+A second sensor provides the relative signal quality as a percentage.
 The status of this sensor is used to report the status of the device itself:
 .Bl -tag -width "CRITICALXX" -offset indent
 .It OK
