make TOC greppable;

--- a/usr.bin/cdio/cdio.1
+++ b/usr.bin/cdio/cdio.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: src/usr.bin/cdio/cdio.1,v 1.46 2007/07/22 21:27:55 sobrado Exp $
+.\" $OpenBSD: src/usr.bin/cdio/cdio.1,v 1.47 2007/11/12 20:37:42 jmc Exp $
 .\"
 .\" Copyright (c) 1995 Serge V. Vakulenko
 .\" All rights reserved.
@@ -89,7 +89,7 @@ is assumed.
 .It Ic blank
 Minimally blank the disc.
 .It Ic cddb Op Ar n
-Print the table of contents after matching the disc with the CDDB.
+Print the Table Of Contents (TOC) after matching the disc with the CDDB.
 In case of multiple matches, reissue the command with
 .Ar n .
 .It Ic cdid
@@ -132,7 +132,7 @@ A synonym for
 .It Ic help
 Print the list of available commands.
 .It Ic info
-Print the table of contents.
+Print the Table Of Contents (TOC).
 .It Ic next
 Play the next track.
 If we're at the last track, stop.
