zap trailing whitespace;

--- a/sbin/ldattach/ldattach.8
+++ b/sbin/ldattach/ldattach.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/sbin/ldattach/ldattach.8,v 1.7 2007/11/13 19:32:34 mbalmer Exp $
+.\"	$OpenBSD: src/sbin/ldattach/ldattach.8,v 1.8 2007/11/13 21:44:55 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Marc Balmer <mbalmer@openbsd.org>
 .\"
@@ -14,7 +14,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: November 3 2007 $
+.Dd $Mdocdate: November 13 2007 $
 .Dt LDATTACH 8
 .Os
 .Sh NAME
@@ -60,7 +60,7 @@ Use odd parity.
 .It Fl s Ar baudrate
 Specifies the speed of the connection.
 If not specified, the default of 9600 baud is used
-(4800 baud for 
+(4800 baud for
 .Xr nmea 4 ) .
 .It Fl t Ar cond
 .Xr nmea 4
