Sort list of device in SYNOPSIS.

--- a/share/man/man4/man4.i386/glxpcib.4
+++ b/share/man/man4/man4.i386/glxpcib.4
@@ -1,8 +1,8 @@
-.\"     $OpenBSD: src/share/man/man4/man4.i386/glxpcib.4,v 1.6 2007/11/17 10:19:20 jmc Exp $
+.\"     $OpenBSD: src/share/man/man4/man4.i386/glxpcib.4,v 1.7 2007/11/17 11:38:50 mbalmer Exp $
 .\"
 .\" Michael Shalayeff, 2007. Public Domain.
 .\"
-.Dd $Mdocdate: November 16 2007 $
+.Dd $Mdocdate: November 17 2007 $
 .Dt GLXPCIB 4 i386
 .Os
 .Sh NAME
@@ -10,8 +10,8 @@
 .Nd "AMD CS5536 PCI-ISA bridge with timecounter, watchdog timer, and GPIO"
 .Sh SYNOPSIS
 .Cd "glxpcib* at pci?"
-.Cd "isa* at glxpcib?"
 .Cd "gpio* at glxpcib?"
+.Cd "isa* at glxpcib?"
 .Sh DESCRIPTION
 The
 .Nm
