simplify macro call;

--- a/usr.sbin/pcidump/pcidump.8
+++ b/usr.sbin/pcidump/pcidump.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.sbin/pcidump/pcidump.8,v 1.4 2007/11/18 00:33:45 kettenis Exp $
+.\"	$OpenBSD: src/usr.sbin/pcidump/pcidump.8,v 1.5 2007/11/18 19:48:16 jmc Exp $
 .\"
 .\" Copyright (c) 2007 Paul de Weerd <weerd@weirdnet.nl>
 .\"
@@ -14,7 +14,7 @@
 .\" TORTIOUS ACTION, ARISING OUT OF
 .\" PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: October 22 2007 $
+.Dd $Mdocdate: November 18 2007 $
 .Dt PCIDUMP 8
 .Os
 .Sh NAME
@@ -22,7 +22,7 @@
 .Nd show PCI device data
 .Sh SYNOPSIS
 .Nm pcidump
-.Op Fl v | Fl x | Fl xx
+.Op Fl v | x | xx
 .Op Fl d Ar pcidev
 .Sm off
 .Op Ar dev : bus : func
